# iconoclast

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.default.toml  docker-compose.yml  justfile
.github/: renovate-global.json  renovate.json5
.github/workflows/: build.yaml  release-plz.yml  renovate.yaml  test-and-build.yaml  test.yaml
examples/demo/: .env  README.md  bacon.toml  config.toml  docker-compose.yml
examples/demo/logic/: Cargo.toml
examples/demo/logic/src/: hello.rs  lib.rs
examples/demo/migrations/: 20250519185040_create_table_todo.sql
examples/demo/model/: Cargo.toml
examples/demo/model/src/: lib.rs
examples/demo/model/src/messages/: mod.rs  topic_hello.rs
examples/demo/repository/: Cargo.toml
examples/demo/repository/src/: lib.rs  test.rs  todo.rs
examples/demo/uservice/: Cargo.toml
examples/demo/uservice/src/: dependencies.rs  main.rs  message_handler.rs  settings.rs
examples/demo/web/: Cargo.toml
examples/demo/web/src/: hello.rs
examples/hexagonal/: .env  README.md  bacon.toml  config.default.toml  config.toml  docker-compose.yml
examples/hexagonal/application/: Cargo.toml
examples/hexagonal/application/src/: inbound.rs  outbound.rs  service.rs
examples/hexagonal/domain/: Cargo.toml
examples/hexagonal/domain/src/: event.rs  from.rs  lib.rs
examples/hexagonal/errors/: Cargo.toml
examples/hexagonal/errors/src/: lib.rs
examples/hexagonal/kafka/: Cargo.toml
examples/hexagonal/kafka/src/: from.rs  lib.rs  message_handler.rs
examples/hexagonal/kafka/src/topic/: mod.rs  todo.rs
examples/hexagonal/main/: Cargo.toml
examples/hexagonal/main/src/: main.rs  wire.rs
examples/hexagonal/repository/: Cargo.toml
examples/hexagonal/repository/.sqlx/: query-154788fc44f406f49d4f1aced6180b29d273c17bd93eb5102f73f16e019d60b1.json  query-5464b13259d138c3c938e8c409befc61dfecff12a5afeff21208528ec6dcd9f6.json  query-7ff82f7b091faed06c816cf8788eb6a009d44a3369a8dd3f99cb74ea6f39256f.json  query-d16ae87589f5a03f32ab7ecf431343ce4745b463be3c7aeb19092f83f5559f83.json  query-e10ca5407575b478d1bf9992e7eeb1ce9b6c687981abda52dd35e3fefeaeaff9.json
examples/hexagonal/repository/migrations/: 20250525144147_add_table_task.sql
examples/hexagonal/repository/src/: lib.rs  task.rs
examples/hexagonal/web/: Cargo.toml
examples/hexagonal/web/src/: lib.rs
examples/hexagonal/web/templates/: _layout.html  index.html
examples/layered/: README.md
examples/simple/: README.md
examples/skeleton/: Cargo.toml  Dockerfile  README.md  config.default.toml  config.sample.toml  justfile
examples/skeleton/.github/workflows/: build.yaml
examples/skeleton/logic/src/: lib.rs
examples/skeleton/model/src/: lib.rs  topics.rs
examples/skeleton/repository/: Cargo.toml
examples/skeleton/repository/src/: error.rs  lib.rs  test.rs
examples/skeleton/uservice/: Cargo.toml
examples/skeleton/uservice/src/: dependencies.rs  error.rs  main.rs  message_handler.rs  settings.rs
examples/skeleton/web/src/: lib.rs
iconoclast/: CHANGELOG.md  Cargo.toml  README.md
iconoclast/src/: config.rs  error.rs  lib.rs  logging.rs  management.rs  management_axum.rs  management_hyper.rs  server.rs
iconoclast/src/config/: builder.rs  iconoclast.rs  mod.rs  service.rs
iconoclast/src/kafka/: config.rs  consumer.rs  error.rs  handler.rs  mod.rs  test.rs
infra/: Cargo.toml
infra/src/: gcloud.rs  kafka.rs  lib.rs  server.rs
infra/src/kafka/: error.rs  mod.rs  test.rs
logic/: Cargo.toml
logic/src/: hello.rs  lib.rs
model/: Cargo.toml
model/src/messages/: hello.rs  mod.rs  topics.rs
repository/: Cargo.toml
repository/src/: dummy.rs  lib.rs
skeleton/: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  config.default.toml  config.sample.toml  docker-compose.yml  justfile
skeleton/.github/: dependabot.yml
skeleton/.github/workflows/: test-and-build.yaml  test.yaml
skeleton/application/: Cargo.toml  README.md
skeleton/application/src/: inbound.rs  lib.rs  outbound.rs
skeleton/domain/: Cargo.toml
skeleton/domain/src/: lib.rs
skeleton/kafka/: Cargo.toml  README.md
skeleton/kafka/src/: lib.rs  message_handler.rs
skeleton/kafka/src/topic/: mod.rs
skeleton/logic/src/: hello.rs
skeleton/main/: Cargo.toml  README.md
skeleton/main/src/: main.rs  wire.rs
skeleton/migrations/: 20250513200212_add_table_greetings.sql
skeleton/model/src/: lib.rs
skeleton/model/src/messages/: mod.rs
skeleton/repository/: Cargo.toml  README.md
skeleton/repository/.sqlx/: query-6c44d518b9d2fbd3ea2c19fde75db4d61e1554007ee59e4e1609810a907879ed.json
skeleton/repository/src/: dummy.rs  lib.rs  test_database.rs
skeleton/uservice/: Cargo.toml
skeleton/uservice/src/: dependencies.rs  error.rs  main.rs  settings.rs
skeleton/web/: Cargo.toml  README.md
skeleton/web/src/: hello.rs  lib.rs  templating.rs
skeleton/web/templates/: _layout.html  index.html
src/: error.rs  main.rs  server.rs
src/consumer/: hello.rs  mod.rs
src/dal/: dummy.rs  error.rs  mod.rs
src/handler/: hello.rs  mod.rs
src/infra/: management.rs  mod.rs
src/init/: dependencies.rs  kafka.rs  mod.rs  settings.rs
src/service/: hello.rs
uservice/: Cargo.toml
uservice/src/: error.rs  main.rs  message_handler.rs  server.rs  settings.rs
uservice/src/consumer/: mod.rs  topic.rs
uservice/src/dal/: mod.rs
uservice/src/handler/: hello.rs  mod.rs
uservice/src/infra/: gcloud.rs  logging.rs  mod.rs
uservice/src/init/: dependencies.rs  mod.rs  settings.rs
uservice/src/service/: hello.rs
web/: Cargo.toml
web/src/: lib.rs
