[package]
name = "iconoclast"
version = "0.1.0"
edition = "2024"

[features]
default = ["listenfd"]
listenfd = ["dep:listenfd"]

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = "0.10.1"
listenfd = { version = "1.0.2", optional = true }
mockall_double = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
mockall = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.140"
http-body-util = "0.1.3"