[package]
name = "iconoclast"
version = "0.1.0"
edition = "2024"

[features]
default = ["listenfd"]
listenfd = ["dep:listenfd"]

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["error-response"] }
config = { version = "0.15.11", features = ["toml"] }
listenfd = { version = "1.0.2", optional = true }
mockall_double = "0.3.1"
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
tokio-stream = "0.1.17"
futures = "0.3.31"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
mockall = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.140"
http-body-util = "0.1.3"
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
