[workspace]
resolver = "2"
members = ["iconoclast", "examples/demo/logic", "examples/demo/model", "examples/demo/repository", "examples/demo/uservice", "examples/demo/web", "examples/hexagonal/application", "examples/hexagonal/repository", "examples/hexagonal/kafka", "examples/hexagonal/web", "examples/hexagonal/domain", "examples/hexagonal/errors", "examples/hexagonal/main"]

[patch.crates-io]
iconoclast = { path = "iconoclast" }
