[package]
name = "iconoclast"
description = "Reusable code for Rust-based business μServices"
repository = "https://github.com/elmarx/iconoclast"
version = "0.3.1"
edition = "2024"
readme = "README.md"
authors = ["Elmar Athmer"]
license = "MIT OR Apache-2.0"

[features]
default = ["listenfd", "config", "mgmt-axum"]
listenfd = ["dep:listenfd"]
livereload = ["dep:tower-livereload"]
kafka = [
    "dep:rdkafka",
    "dep:tokio-stream",
    "dep:futures",
]
gcloud = [
    "dep:tracing-stackdriver",
    "dep:tracing-opentelemetry",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
]
mgmt-axum = []
mgmt-hyper = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tower"
]


[dependencies]
axum = { version = "0.8.3", default-features = false, features = ["json", "tokio", "http1"] }
listenfd = { version = "1.0.2", optional = true }
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["io-std", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-stackdriver = { version = "0.10.0", features = ["http", "opentelemetry"], optional = true }
tracing-opentelemetry = { version = "0.31.0", optional = true }
hyper-util = { version = "0.1.11", features = ["client-legacy"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.6.0", optional = true }
thiserror = "2.0.12"
futures = { version = "0.3.31", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tower-livereload = { version = "0.9.6", optional = true }
config = { version = "0.15.11", features = ["toml"], optional = true }
tower = { version = "0.5.2", optional = true }
serde_with = "3.12.0"

[dev-dependencies]
faux = "0.1.12"
