[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[features]
default = ["listenfd"]
listenfd = ["dep:listenfd"]
kafka = [
    "dep:rdkafka",
    "dep:thiserror",
    "dep:tokio-stream",
    "dep:futures",
]
gcloud = [
    "dep:tracing-stackdriver",
    "dep:tracing-opentelemetry",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
]

[dependencies]
axum = { version = "0.8.3", default-features = false, features = ["json", "tokio", "http1"] }
listenfd = { version = "1.0.2", optional = true }
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["io-std", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-stackdriver = { version = "0.10.0", features = ["http", "opentelemetry"], optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }
hyper-util = { version = "0.1.11", features = ["client-legacy"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.6.0", optional = true }
thiserror = { version = "2.0.12", optional = true }
futures = { version = "0.3.31", optional = true }
tokio-stream = { version = "0.1.17", optional = true }

[dev-dependencies]
faux = "0.1.12"
