[package]
name = "iconoclast"
version = "0.1.0"
edition = "2024"

[features]
default = ["listenfd"]
listenfd = ["dep:listenfd"]
gcloud = [
    "dep:tracing-stackdriver",
    "dep:tracing-opentelemetry",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
]

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["error-response"] }
config = { version = "0.15.11", features = ["toml"] }
listenfd = { version = "1.0.2", optional = true }
mockall_double = "0.3.1"
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tracing-stackdriver = { version = "0.10.0", features = ["http", "opentelemetry"], optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }
hyper-util = { version = "0.1.11", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.6.0", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
mockall = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.140"
http-body-util = "0.1.3"
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
