[package]
name = "iconoclast"
version = "0.1.0"
edition = "2024"

[features]
default = ["listenfd"]
listenfd = ["infra/listenfd"]
gcloud = [
    "infra/gcloud",
]

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["error-response"] }
config = { version = "0.15.11", features = ["toml"] }
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tokio-stream = "0.1.17"
futures = "0.3.31"
repository = { path = "../repository" }
infra = { path = "../infra", features = ["kafka"] }
model = { path = "../model" }
logic = { path = "../logic" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.140"
http-body-util = "0.1.3"
faux = "0.1.12"
repository = { path = "../repository", features = ["faux"] }
logic = { path = "../logic", features = ["faux"] }

