[package]
name = "adapter-kafka"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
rdkafka = { version = "0.37.0", default-features = false }
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
iconoclast = { features = ["kafka"], version = "0.2.0" }
futures = "0.3.31"