[package]
name = "adapter-kafka"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
rdkafka = { version = "0.38.0", default-features = false }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.16"
iconoclast = { features = ["kafka"], version = "0.3.1" }
futures = "0.3.31"
