[package]
name = "adapter-repository"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
application = { path = "../application" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "uuid"] }
domain = { path = "../domain" }
errors = { path = "../errors" }
futures = "0.3.31"
async-trait = "0.1.89"

[dev-dependencies]
testcontainers-modules = { version = "0.13.0", features = ["postgres", "blocking"] }
testcontainers = { version = "0.26.0", features = ["reusable-containers"] }
ctor = "0.5.0"
