[package]
name = "uservice"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = ["iconoclast/listenfd", "iconoclast/livereload"]
gcloud = [
    "iconoclast/gcloud",
]

[dependencies]
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
repository = { path = "../repository" }
iconoclast = { path = "../../iconoclast", features = ["kafka"] }
model = { path = "../model" }
logic = { path = "../logic" }
web = { path = "../web" }
futures = "0.3.31"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

