[package]
name = "adapter-web"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
domain = { path = "../domain" }
errors = { path = "../errors" }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.12.0", features = ["error-response"] }
application = { path = "../application" }
futures = "0.3.31"
itertools = "0.14.0"
askama = "0.14.0"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.145"
http-body-util = "0.1.3"
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros"] }
async-trait = "0.1.89"
