[package]
name = "repository"
version = "0.1.0"
edition = "2024"
description = "Repository Layer for service"
publish = false

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres"] }
thiserror = "2.0.16"
faux = { version = "0.1.12", optional = true }

[dev-dependencies]
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros"] }
faux = "0.1.12"

[features]
faux = ["dep:faux"]
