[package]
name = "uservice"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["iconoclast/listenfd", "iconoclast/livereload"]
gcloud = [
    "iconoclast/gcloud",
]

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
repository = { path = "../repository" }
iconoclast = { features = ["kafka"], version = "0.1.0" }
model = { path = "../model" }
logic = { path = "../logic" }
web = { path = "../web" }
futures = "0.3.31"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
