[package]
name = "adapter-repository"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
application = { path = "../application" }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres"] }
futures = "0.3.31"
domain = { path = "../domain" }
errors = { path = "../errors" }

[dev-dependencies]
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["postgres"] }
tokio = { version = "1.45.0", default-features = false, features = ["rt", "macros"] }
