[package]
name = "adapter-web"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["error-response"] }
application = { path = "../application" }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.140"
http-body-util = "0.1.3"
tokio = { version = "1.44.2", default-features = false, features = ["rt", "macros"] }
